# NeuroMatchEyo

./: README.md
assignment2/: analyze_pollution_data.py
assignment2/analytic_tools/.ipynb_checkpoints/: get_diagnostics-checkpoint.py  utilities-checkpoint.py
assignment2/tests/: test_utilities.py
assignment3/: README.md  pyproject.toml
assignment3/in3110_instapy/: cli.py  cython_filters.html  cython_filters.py  io.py  numba_filters.py  numpy_filters.py  profiling.py  python_filters.py  timing.py
assignment3/instapy.egg-info/: PKG-INFO  SOURCES.txt
assignment3/test/: test_cython.py  test_numba.py  test_numpy.py  test_python.py  testgray.py
assignment4/: collect_dates.py  fetch_olympic_statistics.py  filter_urls.py  find_anniversaries.py  requesting_urls.py  urlexample.py  wiki_race_challenge.py
assignment5/: README.md  app.py  http_cache.sqlite  strompris.py
assignment5/docs/: conf.py
assignment5/docs/_build/doctrees/: environment.pickle  index.doctree  strompris.doctree
assignment5/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  strompris.html
assignment5/docs/_build/html/_sources/: index.rst.txt  strompris.rst.txt
assignment5/klima/: __init__.py  app.py  data.csv  klima.py
assignment5/klima/.ipynb_checkpoints/: app-checkpoint.py  klima-checkpoint.py
assignment5/klima/templates/: klima.html
assignment5/klima/templates/.ipynb_checkpoints/: klima-checkpoint.html
assignment5/templates/: activity.html  help.html  strompris.html
(+1 files in other folders)
